Updating pipeline: Orchestrator Migrate multiple Customers

--- a/pipeline/Create Portal configuration post migration.json
+++ b/pipeline/Create Portal configuration post migration.json
@@ -205,6 +205,8 @@
 						{
 							"name": "Create bcPortalFunctionalAreaToDepartment",
 							"type": "Script",
+							"state": "Inactive",
+							"onInactiveMarkAs": "Succeeded",
 							"dependsOn": [
 								{
 									"activity": "Create bcPortalFunctionalArea",
