Updating pipeline: Migrate ITDR TaskSet Members Partitioned

--- a/pipeline/Migrate ITDR TaskSet Members Partitioned.json
+++ b/pipeline/Migrate ITDR TaskSet Members Partitioned.json
@@ -32,9 +32,44 @@
 						]
 					}
 				],
-				"userProperties": []
+				"userProperties": [],
+				"typeProperties": {
+					"activities": [
+						{
+							"name": "Migrate ITDR TaskSet Members",
+							"type": "ExecutePipeline",
+							"dependsOn": [],
+							"policy": {
+								"secureInput": false
+							},
+							"userProperties": [],
+							"typeProperties": {
+								"pipeline": {
+									"referenceName": "Migrate ITDR TaskSet Members",
+									"type": "PipelineReference"
+								},
+								"waitOnCompletion": true,
+								"parameters": {
+									"iteration_start": {
+										"value": "@item().iteration_start",
+										"type": "Expression"
+									},
+									"iteration_stop": {
+										"value": "@item().iteration_stop",
+										"type": "Expression"
+									}
+								}
+							}
+						}
+					]
+				}
 			}
 		],
+		"variables": {
+			"membersSQL": {
+				"type": "Array"
+			}
+		},
 		"folder": {
 			"name": "ITDR"
 		},
