--- a/pipeline/Migrate ITDR TaskSet.json
+++ b/pipeline/Migrate ITDR TaskSet.json
@@ -88,7 +88,7 @@
 				"userProperties": [],
 				"typeProperties": {
 					"expression": {
-						"value": "@greater(length(variables('teamsSQL')), 0)",
+						"value": "@greater(length(variables('taskSetInsertSql')), 0)",
 						"type": "Expression"
 					},
 					"ifTrueActivities": [
@@ -135,12 +135,6 @@
 		},
 		"variables": {
 			"taskSetInsertSql": {
-				"type": "Array"
-			},
-			"membersSQL": {
-				"type": "Array"
-			},
-			"teamsSQL": {
 				"type": "Array"
 			}
 		},
