--- a/pipeline/Migrate ITDR TaskSet Members Partitioned.json
+++ b/pipeline/Migrate ITDR TaskSet Members Partitioned.json
@@ -3,7 +3,7 @@
 	"properties": {
 		"activities": [
 			{
-				"name": "Execute Pipeline1",
+				"name": "Iterations for TaskSet Tasks",
 				"type": "ExecutePipeline",
 				"dependsOn": [],
 				"policy": {
@@ -26,7 +26,7 @@
 				"type": "ForEach",
 				"dependsOn": [
 					{
-						"activity": "Execute Pipeline1",
+						"activity": "Iterations for TaskSet Tasks",
 						"dependencyConditions": [
 							"Succeeded"
 						]
@@ -38,6 +38,7 @@
 						"value": "@activity('Execute Pipeline1').output.pipelineReturnValue.iteration_data_array",
 						"type": "Expression"
 					},
+					"isSequential": false,
 					"activities": [
 						{
 							"name": "Migrate ITDR TaskSet Members",
