--- a/pipeline/Migrate ITDR TaskSet Members Partitioned.json
+++ b/pipeline/Migrate ITDR TaskSet Members Partitioned.json
@@ -35,7 +35,7 @@
 				"userProperties": [],
 				"typeProperties": {
 					"items": {
-						"value": "@activity('Execute Pipeline1').output.pipelineReturnValue.iteration_data_array",
+						"value": "@activity('Iterations for TaskSet Tasks').output.pipelineReturnValue.iteration_data_array",
 						"type": "Expression"
 					},
 					"isSequential": false,
