--- a/pipeline/Migrate ITDR TaskSet Members.json
+++ b/pipeline/Migrate ITDR TaskSet Members.json
@@ -18,7 +18,7 @@
 					"source": {
 						"type": "AzureMySqlSource",
 						"query": {
-							"value": "select\nnewPortalPlanTechnologyTaskSetMemberId,\nnewPortalPlanTechnologyTaskSetId,\nuserId\nfrom migration_itdr_task_set_members\nwhere row_num between\n@{pipeline().parameters.iteration_start}\nand @{pipeline().parameters.iteration_stop}\n",
+							"value": "select\nnewPortalPlanTechnologyTaskSetMemberId,\nnewPortalPlanTechnologyTaskSetId,\nnewUserId\nfrom migration_itdr_task_set_members\nwhere row_num between\n@{pipeline().parameters.iteration_start}\nand @{pipeline().parameters.iteration_stop}\n",
 							"type": "Expression"
 						},
 						"queryTimeout": "02:00:00"
